Changing URL.host should not override port https://bugs.webkit.org/show_bug.cgi?id=151613

Patch by Rob Buis <rbuis@igalia.com> on 2020-07-17
Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

Update improved test result.

* web-platform-tests/url/url-setters-expected.txt:

Source/WebCore:

When setting host, empty/incorrect port strings
should not change the existing port [1, 2].

Behavior matches Chrome and Firefox.

[1] https://url.spec.whatwg.org/#host-state Step 2.4
[2] https://url.spec.whatwg.org/#port-state Step 2.2

Test: imported/w3c/web-platform-tests/url/url-setters.html

* html/URLDecomposition.cpp:
(WebCore::URLDecomposition::setHost):

LayoutTests:

Adjust tests to expect the new behavior.

* fast/dom/DOMURL/set-href-attribute-host-expected.txt:
* fast/dom/DOMURL/set-href-attribute-host.html:
* fast/dom/HTMLAnchorElement/set-href-attribute-host-expected.txt:
* fast/dom/HTMLAnchorElement/set-href-attribute-host.html:

Canonical link: https://commits.webkit.org/227264@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264516 268f45cc-cd09-0410-ab3c-d52691b4dbfc